# sql2graph-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.docker-socket.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  bridge.py  library.py  main.py  models.py  presets.py
docs/: README.md  api.md  architecture.md  errors.md  frontend.md  install.md  state.md  streaming.md  types.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts
frontend/src/components/: BuildMappingPanel.tsx  ChatSidebar.tsx  ConversationView.tsx  FeatureChips.tsx  FormatSettingsForm.tsx  Header.tsx  InputsPanel.tsx  IterationTimeline.tsx  LlmSettingsForm.tsx  MappingBody.tsx  MappingDrawer.tsx  MappingEditorPanel.tsx  MappingGraph.tsx  MappingGraphLazy.tsx  OutcomePanel.tsx  ResultPane.tsx  RunSetupBar.tsx  Sidebar.tsx  SqlEditor.tsx  SqlPreflightBanner.tsx  SqlWindowInput.tsx  StatusStrip.tsx  Toolbar.tsx  ValidationSettingsForm.tsx  WorkspaceBar.tsx  primitives.tsx
frontend/src/components/ui/: CodeEditor.tsx  Sidebar.tsx  primitives.tsx
frontend/src/hooks/: useDraftMappingValidation.ts  useFeatureDetection.ts  useMappingValidation.ts  useStore.ts  useTableCoverage.ts
frontend/src/lib/: api.ts  diff.ts  types.ts
frontend/src/types/: cytoscape-fcose.d.ts
