[project]
name = "rows2graph-web-backend"
version = "0.1.0"
description = "FastAPI backend that wraps the rows2graph library for the web UI."
requires-python = ">=3.12"
dependencies = [
    "rows2graph",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
]

# The library lives in the sibling repo and is installed editable into the same
# venv, so the backend imports rows2graph exactly as a third-party user would.
[tool.uv.sources]
rows2graph = { path = "../../rows2graph", editable = true }

# This backend is an application, not a distributable package — no build step.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
# rows2graph ships py.typed; its transitive driver deps do not.
[[tool.mypy.overrides]]
module = ["sse_starlette.*"]
ignore_missing_imports = true
