[project]
name = "sql2graph-web-backend"
version = "0.1.0"
description = "FastAPI backend that wraps the sql2graph library for the web UI."
requires-python = ">=3.12"
dependencies = [
    "sql2graph",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.12",
]

# Optional: enables the throwaway-DB availability check in /api/options. The
# `docker` import is soft (try/except), so the backend runs fine without it.
[project.optional-dependencies]
docker = ["docker>=7"]

# The library lives in the sibling repo and is installed editable into the same
# venv, so the backend imports sql2graph exactly as a third-party user would.
[tool.uv.sources]
sql2graph = { path = "../../sql2graph", editable = true }

# This backend is an application, not a distributable package: no build step.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
# sql2graph ships py.typed; its transitive driver deps do not.
[[tool.mypy.overrides]]
module = ["sse_starlette.*"]
ignore_missing_imports = true
